--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@esri/arcgis-html-sanitizer": "~2.9.0-next.1",
+    "@esri/calcite-components": "^1.0.0-beta.69",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "ceg-inspection": "^1.2.0",
+    "focus-trap": "~6.7.1",
+    "luxon": "~2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
